--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- The flexible grid (content) -->
   <div class="row">
     <div class="side">
-      <img src="assets/img/_Demetrius_Perfil-novo.jpg" alt="">
+      <img src="assets/img/foto-perfil.jpg" alt="">
       <p>Olá, eu sou</p>
       <p class="texto-forte"><strong>Demetrius Vignati,</strong></p>
       <p>desenvolvedor front-end e apaixonado por tecnologia.</p>
